gateway/1.4/modules/ROOT/pages/flex-troubleshoot-requests.adoc
= Troubleshooting Request Connection
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

When configuring and running Flex Gateway, you might encounter connection issues. 

You can troubleshoot the outbound connection between the upstream service and Flex Gateway, as well as the inbound connection between Flex Gateway and the client, by making direct requests. Making direct requests isolates Flex Gateway connections allowing you to localize the issue. 

The following diagram demonstrates the difference between inbound and outbound requests. 

image:flex-inbound-outbound-requests.png[This image describes how inbound connections are between the client and Flex Gateway and outbound connections are between Flex Gateway and the upstream service, align=center]

== Outbound Requests Between Flex Gateway and the Upstream Service
Isolating the connection between the upstream service and Flex Gateway allows you to test for connection between the two.

To make a direct outbound request to the upstream service:

. Log into the Flex Gateway container or VM:

* Linux:
+
[source,ssh]
----
ssh [-i sshkey.pem] <user>@<domain>
----


* Docker:
+
[source,ssh]
----
docker exec -it <container-id> bash
----


* Kubernetes:
+
[source,ssh]
----
kubectl -n <namespace> exec -it <pod-name> -- bash
----

. Make a request to the upstream:
+
[source,ssh]
----
curl -v <http://upstream.domain>
----

== Inbound Requests Between the Client and Flex Gateway

Isolating the connection between the Flex Gateway and the client allows you to test if the connection issue is due to a load balancer or another system added between Flex Gateway and the client.

To make a direct inbound request to the client:

. Log into the Flex Gateway container or VM:

* Linux:
+
[source,ssh]
----
ssh [-i sshkey.pem] <user>@<domain>
----


* Docker:
+
[source,ssh]
----
docker exec -it <container-id> bash
----


* Kubernetes:
+
[source,ssh]
----
kubectl -n <namespace> exec -it <pod-name> -- bash
----


. Make a request to Flex Gateway
+
[source,ssh]
----
curl -v http://localhost:<api-instance-port>/<path>
----